[package]
name = "embmq"
version = "0.1.0"
authors = ["Tom Wagner <tom.a.wagner@protonmail.com>"]
edition = "2024"
description = "Async embedded MQTT client using embedded-hal traits"
repository = "https://github.com/tom-a-wagner/embmq"

[dependencies]
embedded-io-async = "0.6.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }